# netcdf-2-csv

./: .gitignore  README.MD  setup.cfg
UNKNOWN.egg-info/: PKG-INFO  SOURCES.txt
src/netcdf2csv/: __init__.py  main.py
src/netcdf2csv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/netcdf_2_csv.egg-info/: PKG-INFO  SOURCES.txt
