[metadata]
name = netcdf-2-csv
version = 0.0.1
author = Anshuman Nayak
author_email = contact@anshumann.in
description = A Package to convert NetCDF files to CSV
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
xarray = >=2022.3.0
pandas = >=1.4.1

[options.packages.find]
where = src
